--- a/partials/site-nav.hbs
+++ b/partials/site-nav.hbs
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="{{@site.lang}}">
 <nav class="site-nav">
     <div class="site-nav-left">
         {{^is "home"}}
@@ -13,12 +15,6 @@
     </div>
     <div class="site-nav-right">
         <div class="social-links">
-            {{#if @site.facebook}}
-                <a class="social-link social-link-fb" href="{{facebook_url @site.facebook}}" title="Facebook" target="_blank" rel="noopener">{{> "icons/facebook"}}</a>
-            {{/if}}
-            {{#if @site.twitter}}
-                <a class="social-link social-link-tw" href="{{twitter_url @site.twitter}}" title="Twitter" target="_blank" rel="noopener">{{> "icons/twitter"}}</a>
-            {{/if}}
         </div>
         {{#if @labs.subscribers}}
             <a class="subscribe-button" href="#subscribe">Subscribe</a>
@@ -27,3 +23,4 @@
         {{/if}}
     </div>
 </nav>
+</html>
