--- a/post.hbs
+++ b/post.hbs
@@ -9,7 +9,7 @@ into the {body} of the default.hbs template --}}
     function content_nav() {
         var contentsTitle = "Content Nav";
         var ToC = "<h2>"+contentsTitle+"</h2>";
-        ToC += "<nav role='navigation' class='table-of-contents'><ul>";
+        ToC += "<nav role='navigation'><ul>";
         var first = true;
         var exit = false;
         $("h1, h2, h3").each(function() {
@@ -56,13 +56,13 @@ into the {body} of the default.hbs template --}}
         <article class="post-full {{post_class}} {{#unless feature_image}}no-image{{/unless}}">
 
             <header class="post-full-header">
+                <h1 class="post-full-title">{{title}}</h1>
                 <section class="post-full-meta">
-                    <time class="post-full-meta-date" datetime="{{date format="YYYY-MM-DD"}}">{{date format="D MMMM YYYY"}}</time>
+                    <time class="post-full-meta-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="D MMMM YYYY"}}</time>
                     {{#primary_tag}}
                         <span class="date-divider">/</span> <a href="{{url}}">{{name}}</a>
                     {{/primary_tag}}
                 </section>
-                <h1 class="post-full-title">{{title}}</h1>
             </header>
 
             {{#if feature_image}}
@@ -70,32 +70,24 @@ into the {body} of the default.hbs template --}}
                 {{!-- This is a responsive image, it loads different sizes depending on device
                 https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 --}}
                 <img
-                    srcset="{{img_url feature_image size="s"}} 300w,
-                            {{img_url feature_image size="m"}} 600w,
-                            {{img_url feature_image size="l"}} 1000w,
-                            {{img_url feature_image size="xl"}} 2000w"
+                    srcset="{{img_url feature_image size='s'}} 300w,
+                            {{img_url feature_image size='m'}} 600w,
+                            {{img_url feature_image size='l'}} 1000w,
+                            {{img_url feature_image size='xl'}} 2000w"
                     sizes="(max-width: 800px) 400px,
                             (max-width: 1170px) 700px,
                             1400px"
-                    src="{{img_url feature_image size="xl"}}"
+                    src="{{img_url feature_image size='xl'}}"
                     alt="{{title}}"
                 />
             </figure>
             {{/if}}
-
-            <section class="post-full-content">
-                <div class="post-content">
-                    {{content}}
-                </div>
-            </section>
-
-            <table>
-                <tr>
-                    <td class="toc_box">
-                        <div id="toc" style="float: right;"></div>
-                    </td>
-                </tr>
-            </table>
+                <div id="toc" class="content_nav"></div>
+                <section class="post-full-content">
+                    <div class="post-content">
+                        {{content}}
+                    </div>
+                </section>
             <script type="text/javascript">content_nav();</script>
 
             {{!-- Email subscribe form at the bottom of the page --}}
@@ -186,7 +178,7 @@ into the {body} of the default.hbs template --}}
 
 {{!-- Floating header which appears on-scroll, included from includes/floating-header.hbs --}}
 {{> floating-header}}
-<div id="disqus_thread"></div>
+<div id="disqus_thread" class="disqus_contain"></div>
 <script>
 
 /**
