--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,32 +37,55 @@
 
 .disqus_contain {
     position: relative;
-    width: 80%;
+    width: 70%;
     margin: 0px auto;
 }
 
 .postcard_tags {
     flex-shrink: 0;
-    margin-left: 20px;
-    color: var(--midgrey);
+    color: white;
     font-size: 1.5rem;
     line-height: 33px;
     font-weight: 500;
     letter-spacing: 0.5px;
-}
-/*test code*/
-.content_contain {
-    width: 100%;  
-    position: relative;
-    white-space: nowrap;
-    overflow: hidden;
+    padding: 0vw .5vw;
 }
 
-.content_nav {
-    top: 0;
-    width: 100px; 
-    right: 0; 
-    bottom: 0;
+.date {
+    text-align: right;
+}
+
+.tags_list {
+    padding-top: .5vw;
+    padding-bottom: .5vw;
+}
+
+.tags_list_item {
+    background: #616161;
+    border-radius: 2vw;
+}
+
+.parent {
+    width: 140%; 
+    position: relative;
+    left: -12.7vw;
+}
+
+.child {  
+    right: 2vw;
     position: absolute;
 }
-/**/
+
+.less_than_3 {
+    right: 6vw;
+}
+
+.all_tags {
+    flex-shrink: 0;
+}
+
+.side_element {
+    background: #F9F9F9;
+    padding: 1.5vw;
+    border-radius: 1vw;
+}
