--- a/default.hbs
+++ b/default.hbs
@@ -14,6 +14,7 @@
     {{!-- Styles'n'Scripts --}}
     <link rel="stylesheet" type="text/css" href="{{asset 'built/screen.css'}}" />
     <link rel="stylesheet" type="text/css" href="{{asset 'css/style.css'}}" />
+    <link rel="stylesheet" href="{{asset 'font-awesome/css/font-awesome.min.css'}}" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/x-mathjax-config">
