--- a/partials/post-card.hbs
+++ b/partials/post-card.hbs
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="{{@site.lang}}">
-<article class="post-card {{post_class}} {{#unless feature_image}}no-image{{else}}{{#is 'home'}}{{#has index='nth:6'}}post-card-large{{/has}}{{/is}}{{/unless}}">
-
+<article class="post-card {{post_class}}">
     {{#if feature_image}}
     <a class="post-card-image-link" href="{{url}}">
         {{!-- This is a responsive image, it loads different sizes depending on device
@@ -30,9 +29,8 @@
                 <p>{{excerpt words="33"}}</p>
             </section>
 
-        </a>
-
-        <footer class="post-card-meta">
+        </a>   
+        <footer class="post-card-meta" style="padding-bottom: .5vw;">
             <ul class="author-list">
             {{#foreach authors}}
                 <li class="author-list-item">
@@ -51,12 +49,16 @@
                 </li>
             {{/foreach}}
             </ul>
-            {{#if tags}}
-                {{#foreach tags limit="3"}}
-                    <a href="{{url}}" class="postcard_tags" title="{{name}}" class="tag tag-{{id}} {{slug}}">{{name}}</a>
-                {{/foreach}}
-            {{/if}}
+            <span><i class="fa fa-calendar fa-fw"></i>{{date published_at format="YYYY-MM-DD"}}</span>
         </footer>
+        {{#if tags}}
+        <hr style="margin: 0;">
+        <footer class="post-card-meta tags_list">
+            {{#foreach tags limit="3"}}
+                <div class="tags_list_item"><a href="{{url}}" class="postcard_tags" title="{{name}}" class="tag tag-{{id}} {{slug}}">{{name}}</a></div>
+            {{/foreach}}
+        </footer>
+        {{/if}}
 
     </div>{{!--/.post-card-content--}}
 
