--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,7 @@
 .child {  
     right: 2vw;
     position: absolute;
+    max-width: 350px;
 }
 
 .less_than_3 {
@@ -82,6 +83,11 @@
 
 .all_tags {
     flex-shrink: 0;
+    margin-left: .6vw;
+}
+
+.only_tags {
+    right: 8vw;
 }
 
 .side_element {
