--- a/page-tags.hbs
+++ b/page-tags.hbs
@@ -1,33 +1,32 @@
+<!DOCTYPE html>
+<html lang="{{@site.lang}}">
 {{!< default}}
 {{!-- The tag above means: insert everything in this file
 into the {body} of the default.hbs template --}}
 
-{{> header background=@site.cover_image}} {{!--Special header.hbs partial to generate the <header> tag--}}
+<header class="site-header outer">
     <div class="inner">
-        <div class="site-header-content">
-            <h1 class="site-title">
-                {{#if @site.logo}}
-                    <img class="site-logo" src="{{img_url @site.logo size="l"}}" alt="{{@site.title}}" />
-                {{else}}
-                    {{@site.title}}
-                {{/if}}
-            </h1>
-            <h2 class="site-description">{{@site.description}}</h2>
-        </div>
+        {{> "site-nav"}}
     </div>
 </header>
 
-{{!-- The main content area --}}
-<main id="site-main" class="site-main outer">
-    <div class="inner">
-        <div class="tags-box">
-            <h2 class="tags-title">Tag</h2>
-            <ul class="tags-list">
-            </ul>
+<div class="site-main outer">
+    <main id="site-main" class="site-main outer">
+        <div class="inner">
+            <article class="post-full post page no-image">
+                <header class="post-full-header">
+                    <h1 class="post-full-title">Tags</h1>
+                </header>
+                <section class="post-full-content">
+                    <div class="tags-box">
+                        <ul class="tags-list"></ul>
+                    </div>
+                </section>
+            </article>
         </div>
+    </article>
+</div>
 
-    </div>
-</main>
 <script>
     window.onload= function(){
         $.ajax({url:'/ghost/api/v2/content/tags/?key='+_ApiKey+'&include=count.posts',success:function(re){
@@ -38,3 +37,4 @@ into the {body} of the default.hbs template --}}
         }},)
     }
 </script>
+</html>
