--- a/page-archives.hbs
+++ b/page-archives.hbs
@@ -63,7 +63,7 @@
 				}else{
 					
 					//var html = "<div class='item'><h3><i class='fa fa-calendar fa-fw' aria-hidden='true'></i> "+year+"-"+month+"</h3><ul class='archives-list list-"+year+"-"+month+"'><li><time>"+date+" </time><a href='"+url+"'>"+title+"</a><div class='archives-excerpt'>"+excerpt+"<div></li></ul></div>";
-					var html = "<div class='item'><h3><i class='fa fa-calendar fa-fw' aria-hidden='true'></i> "+year+"-"+month+"</h3><ul class='archives-list list-"+year+"-"+month+"'><li><time>"+date+" </time><a class='archive-list-item' href='"+url+"'>"+title+"</a></li></ul></div>";
+					var html = "<div class='item'><h3><i class='fa fa-calendar fa-fw' aria-hidden='true'></i> "+year+"-"+month+"</h3><ul class='archives-list list-"+year+"-"+month+"'><li><time>"+date+" </time><a href='"+url+"'>"+title+"</a></li></ul></div>";
 					$(html).appendTo('.archives');
 				}
 			}
