--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -2,16 +2,17 @@
 <html lang="{{@site.lang}}">
 <div class="footer_container">
 	<footer class="footer">
-		<hr style="width: 90%; margin: 0 auto;">
 		<div class="row">
 			<div class="column">
-				{{> footer-nav}}
+				{{> recent_post}}
 			</div>
 			<div class="vl"></div>
 			<div class="column">
 				{{> footer-subscribe}}
 			</div>
 		</div>
+		<hr style="width: 90%; margin: 0 auto;">
+
 	</footer>
 </div>
 </html>
