--- a/partials/site-nav.hbs
+++ b/partials/site-nav.hbs
@@ -14,8 +14,7 @@
         {{/if}}
     </div>
     <div class="site-nav-right">
-        <div class="social-links">
-        </div>
+        {{> search}}
         {{#if @labs.subscribers}}
             <a class="subscribe-button" href="#subscribe">Subscribe</a>
         {{else}}
