--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,7 +100,7 @@
 }
 
 .footer {
-    background: #F8F8F8;
+    background-image: linear-gradient(#7B8082, black);
     margin: 0 auto;
 }
 
@@ -113,20 +113,20 @@
 }
 
 .footer_nav_title, .footer_subscribe_form_title{
-    color: black;
-    font-size: 3.5rem;
+    color: white;
+    font-size: 2rem;
     line-height: 1;
-    margin-top: .5vw;
+    margin-top: 2vw;
 }
 
 .footer_nav_item {
     list-style: none;
-    font-size: 2rem;
+    font-size: 1.7rem;
     margin-left: 0;
 }
 
 .footer_nav_item_text {
-    color: var(--darkgrey);
+    color: red;
 }
 
 .row {
@@ -137,6 +137,7 @@
 }
 
 .column {
+    position: relative;
     display: flex;
     flex-direction: column;
     flex-basis: 100%;
@@ -222,4 +223,50 @@
 .form_submit_button:hover {
     background: #25A85D;
     color: white;
+}
+
+.nav-current {
+    font-weight: bold;
+}
+
+.search_holder {
+    margin: 0;
+    margin-right: 5px;
+    padding: 0; 
+}
+
+.search_form {
+    display: none;
+    position: relative;
+    margin: 0;
+    padding: 0;
+    height: inherit;
+}
+
+.search_field {
+    display: inline-block;
+    font-size: 1.2rem;
+    border: 1px solid grey;
+    width: 200px;
+    outline: none;
+    border-radius: 10px;
+    color: black;
+    padding: 4px 10px;
+    margin: 0px;
+    line-height: 1em;
+}
+
+.show_search_button, .search_button {
+    display: inline-block;
+    position: relative;
+    outline: none;
+    background: none;
+    color: #fff;
+    opacity: 0.8; 
+    margin: 0;
+    padding: 0;
+}
+
+.show_search_button:hover, .search_button:hover {
+    opacity: 1;
 }
