--- a/page-archives.hbs
+++ b/page-archives.hbs
@@ -20,7 +20,7 @@
 				</section>
 			</article>
 		</div>
-	</article>
+	</main>
 </div>
 
 <script src="//cdn.bootcss.com/moment.js/2.14.1/moment.min.js"></script>
