--- a/page-tags.hbs
+++ b/page-tags.hbs
@@ -24,7 +24,7 @@ into the {body} of the default.hbs template --}}
                 </section>
             </article>
         </div>
-    </article>
+    </main>
 </div>
 
 <script>
