--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,37 +100,37 @@
 }
 
 .footer {
-    background-image: linear-gradient(#7B8082, black);
+    background-image: linear-gradient(#444444, black);
     margin: 0 auto;
 }
 
-.footer_subscribe_form, .footer_recent_post {
+.footer_subscribe_form, .footer_recent_post, .footer_nav {
     margin: 0px auto;
 }
 
-.footer_recent_post ul {
+.footer_recent_post ul, .footer_nav ul {
      margin-bottom: .5vw;
      list-style: none;
      padding-left: 0;
 }
 
-.footer_subscribe_form_title, .footer_recent_post_title{
+.footer_subscribe_form_title, .footer_recent_post_title, .footer_nav_title{
     color: white;
     font-size: 2rem;
     line-height: 1;
     margin-top: 2vw;
 }
 
-.footer_recent_post {
+.footer_recent_post, .footer_nav {
     font-size: 1.7rem;
 }
 
-.footer_recent_post_text {
+.footer_recent_post_text, .footer_nav_text {
     color: white;
     opacity: .8;
 }
 
-.footer_recent_post_text:hover {
+.footer_recent_post_text:hover, .footer_nav_text:hover {
     opacity: 1;
 }
 
@@ -241,24 +241,40 @@
 }
 
 .search_form {
-    display: none;
     position: relative;
     margin: 0;
     padding: 0;
-    height: inherit;
+    border: 1px solid grey;
+    border-radius: 10px;
 }
 
 .search_field {
-    display: inline-block;
-    font-size: 1.2rem;
-    border: 1px solid grey;
-    width: 200px;
+    background: none;
+    border: none;
     outline: none;
-    border-radius: 10px;
     color: black;
     padding: 4px 10px;
     margin: 0px;
     line-height: 1em;
+    width: 95%;
+    display: flex inline-block;
+}
+
+.remove_field {
+    margin: 0;
+    margin-right: 5px;
+    background: none;
+    border: none;
+    outline: none;
+    color: black;
+    opacity: .8;
+    float: right;
+    position: fixed;
+    display: flex inline-block;
+}
+
+.remove_field:hover {
+    opacity: 1;
 }
 
 .show_search_button {
@@ -307,4 +323,41 @@
     font-size: 1.2rem;
     text-align: right;
     color: grey;
+}
+
+.footer_subscribe_form {
+    margin: 0 auto;
+}
+
+.footer_subscribe_input {
+    margin-top: 1.5vw;
+    padding: 8px 2px;
+    border-radius: .5rem;
+    border: 1px solid #217EBC;
+    width: 100%;
+    display: flex block;
+}
+
+.footer_subscribe_button {
+    float: right;
+    margin-top: 1.5vw;
+    background: none;
+    color: white;
+    border: 1px solid #25A85D;
+    border-radius: .5rem;
+    display: flex block;
+}
+
+.footer_subscribe_button:hover {
+    background: #25A85D;
+}
+
+.pagination {
+    text-align: center;
+    margin: 0 auto;
+    padding: .5vw;
+}
+
+.page-number, .newer-posts, .older-posts {
+    font-size: 1.4vw;
 }
